# chromatica

./: .gitignore  Cargo.toml  README.md
examples/alert/: alert.html  main.rs
examples/confirm/: confirm.html  main.rs
examples/element_by_text/: element_by_text.html  iframe.html  main.rs
examples/extra_headers/: extra_headers.html  main.rs
examples/filechooser/: filechooser.html  main.rs
examples/onbeforeunload/: main.rs  onbeforeunload.html
examples/pdf/: main.rs  pdf.html
examples/prompt/: main.rs  prompt.html
examples/request_interception/: main.rs
examples/screenshot/: main.rs  screenshot.html
src/: lib.rs
src/core/: browser.rs  browser_context.rs  chromatica.rs  element.rs  http_response.rs  mod.rs  page.rs
src/core/cdp/: browser.rs  browser_context.rs  connection.rs  element.rs  emulation_manager.rs  file_chooser.rs  frame_inner.rs  http_request.rs  http_response.rs  js_dialogs.rs  js_manager.rs  mod.rs  network_manager.rs  page.rs  query_builder.rs  target.rs  target_manager.rs
src/core/cdp/domains/: browser.rs  dom.rs  dom_storage.rs  emulation.rs  fetch.rs  input.rs  mod.rs  network.rs  page.rs  runtime.rs  target.rs
