[package]
name = "chromatica"
version = "1.0.0"
edition = "2024"

description = "A Rust library for browser automation, based on CDP (Chrome DevTools Protocol)."
authors = ["IvanSen <ivansendn@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/IvanSenDN/chromatica"
repository = "https://github.com/IvanSenDN/chromatica"
keywords = ["chrome", "chromedriver", "automation", "chromatica"]
categories = ["web-scraping", "automation","browser-automation", "cdp", "devtools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = { version = "6.1", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22"
regex = "1.11.1"